--- a/index.html
+++ b/index.html
@@ -80,7 +80,7 @@
                 <!-- Large Button Start -->
                 <div class="large-btn">
                     <div class="content-inner">
-                        <a class="btn" href="raveen.pdf"><i class="fa fa-download"></i>Resume</a>
+                        <a class="btn" href="Raveen.pdf"><i class="fa fa-download"></i>Resume</a>
                         <a class="btn" href="https://linktr.ee/raveenraj"><i class="fa fa-eye"></i>LinkTree</a>
                     </div>
                 </div>
