--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
 
         <!-- Favicon -->
         <link href="img/favicon.ico" rel="icon">
-
+<meta name="google-site-verification" content="vctmDIlKJ4I1VAWWMNiN89cuEqwdh5IkBrFkm7GHl-c" />
         <!-- Google Fonts -->
         <link href="https://fonts.googleapis.com/css2?family=Open+Sans:300;400;600;700;800&display=swap" rel="stylesheet">
 
